--- a/fontes/html/estilos.html
+++ b/fontes/html/estilos.html
@@ -86,7 +86,9 @@
 							<input type="submit" accesskey="0" value="input submit" />
 							<input type="reset" accesskey="0" value="input reset" />
 							<button disabled type="button" accesskey="0">button</button>
-							<input disabled type="button" accesskey="0" value="input button" />
+							<button type="button" accesskey="0"><span>@</span>button</button>
+							<button disabled type="button" accesskey="n"><span>@</span>button</button>
+							<input disabled type="button" accesskey="n" value="input button" />
 						</div>
 					</div>
 					<div>
@@ -131,12 +133,12 @@
 					</div>
 					<div>
 						<div class="horizontal">
-							<button iconeantes="£" type="button">button</button>
-							<button iconeantes="%" class="perigo" type="button">button</button>
-							<button iconeantes="#" iconedepois="¬" class="aviso" type="button">button</button>
-							<button iconeantes="+" iconedepois="*" class="informacao" type="button">button</button>
-							<button iconedepois="2" class="seguro" type="button">button</button>
-							<button iconedepois="certo" disabled type="button">button</button>
+							<button type="button"><span>£</span>button</button>
+							<button class="perigo" type="button"><span>%</span>button</button>
+							<button class="aviso" type="button"><span>¬</span>button<span>#</span></button>
+							<button class="informacao" type="button"><span>+</span>button<span>*</span></button>
+							<button class="seguro" type="button">button<span>2</span></button>
+							<button disabled type="button">button<span>certo</span></button>
 						</div>
 					</div>
 				</div>
